src/app/app.component.css
h1, h2, h3, h4, h5, p {
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
  color: white;
}

@keyframes bounce {
  0% {
    transform: translateY(0%);
  } 50% {
    transform: translateY(10%);
  } 100% {
    transform: translateY(0%);
  }
}

.go-down {
  animation: bounce 2s ease 0s infinite;
}

.go-down:hover {
  color: #333333;
}

.link {
  transition: all 200ms ease-in-out;
  padding: 0 0.25em 0 0.25em;
  margin-inline: 0.25em;
}

.link:hover {
  background: #F08080;
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.divider {
  font-weight: lighter;
  color: #333333;
}

section {
  min-height: 400px;
}

.blue {
  background: #0266ff;
}

.pink {
  background: #ff0267;
}

.green {
  background: #67ff02;
}

.spacer {
  position: relative;
  z-index: -1;
  aspect-ratio: 960/150;
  width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

.wave1 {
  aspect-ratio: 960/300;
  background-image: url('../assets/wave.svg');
}

.wave2 {
  background-image: url('../assets/wave2.svg');
}

.wave3 {
  background-image: url('../assets/wave3.svg');
}

.wave4{
  background-image: url('../assets/wave4.svg');
}

.nav {
  position: fixed;
  right: 0;
  padding: 1em;
  font-size: 20px;
  font-weight: bold;
  display: flex;
  width: 14em;
  justify-content: space-evenly;
  align-items: center;
  z-index: 1001;
}

#welcome {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#about {

}

#projects {

}

.footer {
  display: grid;
  row-gap: 1em;
  place-content: center;
  text-align: center;
}

.netlify-wrapper {
  display: flex;
  justify-content: center;
}

.socials {
  display: flex;
  justify-content: space-evenly;
}

@media screen and (max-width: 700px) {
  .nav {
    width: 100vw;
    background: #0266ff;
    z-index: 1001;
    bottom: 0;
    display: flex;
    justify-content: space-evenly;
  }
}

